rough draft for code

--- a/sort.ipynb
+++ b/sort.ipynb
@@ -801,15 +801,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (261715786.py, line 32)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[93], line 32\u001b[0;36m\u001b[0m\n\u001b[0;31m    return check_one_name(instructors[0], approved)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Department', 'Department_FULL', 'Instruction Mode', 'Classes Links',\n",
+      "       'Course Number', 'Instructor 1', 'Instructor 2', 'Total Open Seats',\n",
+      "       'Enrolled', 'Waitlisted', 'Capacity', 'Waitlist Max',\n",
+      "       'Open Reserved Seats', 'Also offered as'],\n",
+      "      dtype='object')\n",
+      "AFRICAM 27AC ['michael m cohen']\n",
+      "          Department_Classes Dept_Cleaned Course Number     Instructors  \\\n",
+      "3  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   Leigh Raiford   \n",
+      "4  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   Michael Cohen   \n",
+      "5  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   Percy Hintzen   \n",
+      "6  AFRICAN AMERICAN STUDIES       AFRICAM          27AC  Rose Wilkerson   \n",
+      "7  AFRICAN AMERICAN STUDIES       AFRICAM          27AC      Tommy Lott   \n",
+      "\n",
+      "  Co-instructor? # instructors Cross-listed?  \n",
+      "3          FALSE             1         FALSE  \n",
+      "4          FALSE             1         FALSE  \n",
+      "5          FALSE             1         FALSE  \n",
+      "6          FALSE             1         FALSE  \n",
+      "7          FALSE             1         FALSE  \n",
+      "nan\n",
+      "3     leigh raiford\n",
+      "4     michael cohen\n",
+      "5     percy hintzen\n",
+      "6    rose wilkerson\n",
+      "7        tommy lott\n",
+      "Name: Instructors, dtype: object\n",
+      "['michael cohen']\n",
+      "michael m cohen who teaches AFRICAM 27AC is probably in the spreadsheet as michael cohen.\n"
      ]
     }
    ],
@@ -828,7 +854,7 @@
     "    j = 1\n",
     "    for colname in instructor_cols:\n",
     "        if pd.notnull(row[colname]):\n",
-    "            instructors.append(row[colname])\n",
+    "            instructors.append(row[colname].lower())\n",
     "        else:\n",
     "            break\n",
     "    \n",
@@ -845,18 +871,18 @@
     "    print(row['Also offered as'])\n",
     "\n",
     "    if len(instructors) == 1:\n",
-    "        return check_one_name(instructors[0], approved)\n",
+    "        status = check_one_name(instructors[0], approved)\n",
     "    \n",
     "    else:\n",
     "        # co instructors!!!\n",
-    "        return check_co_names(instructors, approved)\n",
+    "        check_co_names(instructors, approved)\n",
     "\n",
     "    break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1022,7 @@
        "50        Waldo Martin          FALSE             1         FALSE  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1030,26 +1056,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 281,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2987247514.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[239], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    return [\"Approved\" for inst in roster['Instructors'] if inst == closest_match[0] else \"Not Approved\"]\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def check_one_name(name, roster):\n",
+    "    print(roster['Instructors'])\n",
+    "\n",
     "    closest_match = difflib.get_close_matches(name, roster['Instructors'], n=1, cutoff=0.9)\n",
+    "    print('full match:',  closest_match)\n",
     "    if closest_match:\n",
     "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is probably in the spreadsheet as {closest_match[0]}.')\n",
     "        #approval_status.append('Approved')\n",
-    "        return [\"Approved\" for inst in roster['Instructors'] if inst == closest_match[0] else \"Not Approved\"]\n",
+    "        \n",
+    "        return [ \"Match\" if inst == closest_match[0] else \"No Match\" for inst in roster['Instructors']]\n",
     "    else:\n",
     "        approval_status = []\n",
     "        \n",
@@ -1067,7 +1088,7 @@
     "                \n",
     "                score /= len(n) # average score -- A higher SCORE IS BETTER (smaller differences!)\n",
     "                if score > .8:\n",
-    "                    approval_status.append('Approved')\n",
+    "                    approval_status.append('Match')\n",
     "            \n",
     "            elif len(n) > len(a): # classes.berkeley.edu display name is longer; likely theres a middle name or something\n",
     "                # TODO: loop through a list and match first name and end to middle.\n",
@@ -1085,9 +1106,9 @@
     "                            approval_status.append('Unsure')\n",
     "                        elif middle_score > .3:\n",
     "                            #print (\"match?:\", n[0] + ' ' + n[len(n)-1], a[0] + ' ' + a[len(a)-1])\n",
-    "                            approval_status.append('Approved')\n",
+    "                            approval_status.append('Match')\n",
     "                else:\n",
-    "                    approval_status.append('Not Approved')\n",
+    "                    approval_status.append('No Match')\n",
     "                \n",
     "                    # simplified: match the middle words. see how diff it is.\n",
     "                    \n",
@@ -1099,7 +1120,7 @@
     "                if roster['Co-instructor?'].values[i] == True:\n",
     "                    \n",
     "                    #print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} doesn\\'t match {apr_name} by co-instructor rule')\n",
-    "                    approval_status.append('Not Approved')\n",
+    "                    approval_status.append('No Match')\n",
     "                \n",
     "                else: # rare case where senate name is longer than display name -- likely a middle name or secondary name somewhere\n",
     "                    # if first names don't match with a score above 80%, then its prob not a match:\n",
@@ -1115,13 +1136,13 @@
     "                            approval_status.append('Unsure')\n",
     "                        elif middle_score > .3:\n",
     "                            #print (\"match?:\", n[0] + ' ' + n[len(n)-1], a[0] + ' ' + a[len(a)-1])\n",
-    "                            approval_status.append('Approved')\n",
+    "                            approval_status.append('Match')\n",
     "                    else:\n",
-    "                        approval_status.append('Not Approved')\n",
-    "    print(approval_status)\n",
-    "    print('Approved' in approval_status)\n",
-    "    if 'Approved' in approval_status:\n",
-    "        i = approval_status.index('Approved')\n",
+    "                        approval_status.append('No Match')\n",
+    "    #print(approval_status)\n",
+    "    #print('Match' in approval_status)\n",
+    "    if 'Match' in approval_status:\n",
+    "        i = approval_status.index('Match')\n",
     "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is probably APPROVED as {approved[\"Instructors\"].values[i]}.')\n",
     "    elif 'Unsure' in approval_status:\n",
     "        i = approval_status.index('Unsure')\n",
@@ -1135,47 +1156,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 271,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Department_Classes</th>\n",
+       "      <th>Dept_Cleaned</th>\n",
+       "      <th>Course Number</th>\n",
+       "      <th>Instructors</th>\n",
+       "      <th>Co-instructor?</th>\n",
+       "      <th># instructors</th>\n",
+       "      <th>Cross-listed?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AFRICAN AMERICAN STUDIES</td>\n",
+       "      <td>AFRICAM</td>\n",
+       "      <td>27AC</td>\n",
+       "      <td>leigh raiford</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FALSE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AFRICAN AMERICAN STUDIES</td>\n",
+       "      <td>AFRICAM</td>\n",
+       "      <td>27AC</td>\n",
+       "      <td>michael cohen</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FALSE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AFRICAN AMERICAN STUDIES</td>\n",
+       "      <td>AFRICAM</td>\n",
+       "      <td>27AC</td>\n",
+       "      <td>percy hintzen</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FALSE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AFRICAN AMERICAN STUDIES</td>\n",
+       "      <td>AFRICAM</td>\n",
+       "      <td>27AC</td>\n",
+       "      <td>rose wilkerson</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FALSE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AFRICAN AMERICAN STUDIES</td>\n",
+       "      <td>AFRICAM</td>\n",
+       "      <td>27AC</td>\n",
+       "      <td>tommy lott</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FALSE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Department_Classes Dept_Cleaned Course Number     Instructors  \\\n",
+       "3  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   leigh raiford   \n",
+       "4  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   michael cohen   \n",
+       "5  AFRICAN AMERICAN STUDIES       AFRICAM          27AC   percy hintzen   \n",
+       "6  AFRICAN AMERICAN STUDIES       AFRICAM          27AC  rose wilkerson   \n",
+       "7  AFRICAN AMERICAN STUDIES       AFRICAM          27AC      tommy lott   \n",
+       "\n",
+       "  Co-instructor? # instructors Cross-listed?  \n",
+       "3          FALSE             1         FALSE  \n",
+       "4          FALSE             1         FALSE  \n",
+       "5          FALSE             1         FALSE  \n",
+       "6          FALSE             1         FALSE  \n",
+       "7          FALSE             1         FALSE  "
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#def check_co_names(names, roster):\n",
-    "    "
+    "approved"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved']\n",
-      "False\n",
-      "sarah gold mcbride who teaches AMERSTD 101AC is not in the spreadsheet.\n"
+      "3     leigh raiford\n",
+      "4     michael cohen\n",
+      "5     percy hintzen\n",
+      "6    rose wilkerson\n",
+      "7        tommy lott\n",
+      "Name: Instructors, dtype: object\n",
+      "full match: ['leigh raiford']\n",
+      "leigh raiford who teaches AFRICAM 27AC is probably in the spreadsheet as leigh raiford.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['Not Approved',\n",
-       " 'Not Approved',\n",
-       " 'Not Approved',\n",
-       " 'Not Approved',\n",
-       " 'Not Approved',\n",
-       " 'Not Approved',\n",
-       " 'Not Approved']"
+       "['Match', 'No Match', 'No Match', 'No Match', 'No Match']"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_one_name(\"sarah gold mcbride\", approved)\n",
+    "check_one_name(\"leigh raiford\", approved)\n",
     "\n"
    ]
   },
